Database Connection create

--- a/ML/App.config
+++ b/ML/App.config
@@ -9,4 +9,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="EjercicioGitHubEntities" connectionString="metadata=res://*/EquipoPracticaGitHub.csdl|res://*/EquipoPracticaGitHub.ssdl|res://*/EquipoPracticaGitHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=EjercicioGitHub;persist security info=True;user id=sa;password=pass@word1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
