--- a/DL/DL.csproj
+++ b/DL/DL.csproj
@@ -66,7 +66,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CRUDGitHub.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Evento.cs">
+      <DependentUpon>CRUDGitHub.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoEvento.cs">
+      <DependentUpon>CRUDGitHub.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="CRUDGitHub.edmx">
