Correcion de errores al hacer merge en la master

--- a/DL/App.Config
+++ b/DL/App.Config
@@ -4,9 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="EjercicioGitHubEntities" connectionString="metadata=res://*/CRUDGitHub.csdl|res://*/CRUDGitHub.ssdl|res://*/CRUDGitHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=EjercicioGitHub;persist security info=True;user id=sa;password=pass@word1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -17,4 +15,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings>
+    <add name="EjercicioGitHubEntities" connectionString="metadata=res://*/PracticaGitHub.csdl|res://*/PracticaGitHub.ssdl|res://*/PracticaGitHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=EjercicioGitHub;persist security info=True;user id=sa;password=pass@word1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
 </configuration>
