--- a/SL_PL/Web.config
+++ b/SL_PL/Web.config
@@ -8,6 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="EjercicioGitHubEntities" connectionString="metadata=res://*/PracticaGitHub.csdl|res://*/PracticaGitHub.ssdl|res://*/PracticaGitHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=EjercicioGitHub;persist security info=True;user id=sa;password=pass@word1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
